@@ -42,9 +42,6 @@ public:
     int appletCount();
     DcpAppletMetadata* appletMetadata(int i);
 
-public slots:
-    virtual void back();
-
 protected:
     virtual void retranslateUi();
     QGraphicsWidget* createCategories ();
