@@ -27,6 +27,7 @@ class DcpAppletWidget;
 class DcpAppletObject;
 class MLabel;
 class MAction;
+class MDismissEvent;
 
 class DcpAppletPage : public DcpPage
 {
@@ -47,10 +48,7 @@ public:
 
 protected:
     virtual void retranslateUi ();
-    virtual void polishEvent ();
-
-protected slots:
-    virtual void back ();
+    virtual void dismissEvent (MDismissEvent *event);
 
 private:
     void loadWidget (int widgetId);
