@@ -87,3 +87,8 @@ DcpAppletPage::constructAppletWidget(DcpAppletObject*, DcpPage*, int)
     return 0;
 }
 
+void
+DcpAppletPage::dismissEvent (MDismissEvent *)
+{
+}
+
