@@ -30,6 +30,8 @@ public:
     SkeletonWidget(QGraphicsWidget *parent = 0);
     virtual ~SkeletonWidget();
 
+//    virtual bool back() { return false; }
+
 protected:
     void initWidget();
 
